# leptos-spin

./: README.md
.github/workflows/: ci.yaml
templates/leptos-spin/content/: .gitignore  Cargo.toml  README.md  spin.toml
templates/leptos-spin/content/src/: app.rs
templates/leptos-spin/metadata/: spin-template.toml
templates/leptos-ssr/content/: Cargo.toml.tmpl
templates/leptos-ssr/content/src/: server.rs
templates/leptos-wasmtime/content/: Cargo.toml  Makefile  README.md  spin.toml
templates/leptos-wasmtime/content/src/: app.rs
templates/leptos-wasmtime/metadata/: spin-template.toml
